# voxyne

./: .gitignore  CITATION.cff  LICENSE  NOTICE  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: publish.yml
experiments/: README.md  benchmark_v2.py  coherence_compare.py  export_voxyne.py  gen_benchmark.py  run_all_claims.py
experiments/artifacts/: coherence_compare.json  generation_benchmark.json  manifest.json  manifest_v2.json  results.json  results_v2.json
src/voxyne/: __init__.py  config.py  encoder.py  generate.py  markers.py  model.py
tests/: test_smoke.py
